# WinFreddy

./: .gitignore  CMakeLists.txt  README.md  appveyor.yml
cmake/: utils.cmake
src/: constants.cpp  constants.h  core_window.cpp  core_window.h  main.cpp  message_window.cpp  message_window.h  registry_record.cpp  registry_record.h  scoped_thread_locker.cpp  scoped_thread_locker.h  tray_icon.cpp  tray_icon.h  tray_menu.cpp  tray_menu.h  utils.h
src/resources/: resources.rc
